--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
-The two contributors of this project are
+The two contributors of this project are:
 
 
 EDWIN AUGUSTINE <auztintech@gmail.com> 
-BAKARE ADESHINA <bakareadeshina@gmail.com>
+BAKARE ADESHINA <adeshina524@gmail.com>
 
